--- a/notebooks/clean_feature_eng.ipynb
+++ b/notebooks/clean_feature_eng.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "id": "a964a9a9-23fc-4450-9867-bc8ee4c3a2cc",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "id": "5ed4214d-1c8f-4fd4-9be5-0d5850e60747",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "id": "15a00495-547b-48b0-b86d-9509b11e7014",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "id": "3357c913-d80f-4609-a92d-9b1de6f13917",
    "metadata": {},
    "outputs": [],
@@ -46,30 +46,29 @@
     "    \"Midwest\": ['IL', 'IN', 'MI', 'OH', 'WI', 'IA', 'KS', 'MN', 'MO', 'NE', 'ND', 'SD'],\n",
     "    \"Southwest\": ['AZ', 'NM', 'OK', 'TX'],\n",
     "    \"West\": ['CO', 'ID', 'MT', 'NV', 'UT', 'WY', 'AK', 'CA', 'HI', 'OR', 'WA']\n",
-    "}\n",
-    "\n",
-    "def get_region(state_code):\n",
-    "    for region, states in regions.items():\n",
-    "        if state_code in states:\n",
-    "            return region\n",
-    "    return \"Others\""
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "id": "52e53791-32e5-4a41-b2f4-7da8e11352e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_selected = df_selected.copy()\n",
     "df_selected.loc[:, 'state_code'] = df_selected['location'].str.split(',').str[-1].str.strip()\n",
-    "df_selected.loc[:, 'region'] = df_selected['state_code'].apply(get_region)"
+    "\n",
+    "# Flatten the regions dictionary to a reverse map where each state maps directly to its region\n",
+    "state_to_region = {state: region for region, states in regions.items() for state in states}\n",
+    "\n",
+    "# Use the pandas map function to apply this new dictionary to the state_code column\n",
+    "df_selected['region'] = df_selected['state_code'].map(state_to_region)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "id": "c8e01692-1ae1-42b5-85ea-62f4073f2e16",
    "metadata": {},
    "outputs": [],
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "id": "513ee280-93ec-42cb-b627-022d089a1f0c",
    "metadata": {},
    "outputs": [
@@ -118,6 +117,34 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Principal Cloud Security Architect (Remote)</td>\n",
+       "      <td>275834.0</td>\n",
+       "      <td>205956.0</td>\n",
+       "      <td>YEARLY</td>\n",
+       "      <td>Full-time</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Mid-Senior level</td>\n",
+       "      <td>OffsiteApply</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Insights Analyst - Auto Industry</td>\n",
+       "      <td>64000.0</td>\n",
+       "      <td>58000.0</td>\n",
+       "      <td>YEARLY</td>\n",
+       "      <td>Full-time</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Entry level</td>\n",
+       "      <td>OffsiteApply</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Sales Manager</td>\n",
@@ -159,34 +186,6 @@
        "      <td>OffsiteApply</td>\n",
        "      <td>FL</td>\n",
        "      <td>Southeast</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>CDL Class B Driver</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>HOURLY</td>\n",
-       "      <td>Full-time</td>\n",
-       "      <td>Oakland, CA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Mid-Senior level</td>\n",
-       "      <td>OffsiteApply</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>West</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Senior Manager, Indirect Procurement</td>\n",
-       "      <td>143000.0</td>\n",
-       "      <td>96000.0</td>\n",
-       "      <td>YEARLY</td>\n",
-       "      <td>Full-time</td>\n",
-       "      <td>Broomfield, CO</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Mid-Senior level</td>\n",
-       "      <td>SimpleOnsiteApply</td>\n",
-       "      <td>CO</td>\n",
-       "      <td>West</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -274,29 +273,29 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8960 rows × 11 columns</p>\n",
+       "<p>11111 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      title  max_salary  min_salary  \\\n",
-       "2                             Sales Manager    350000.0    125000.0   \n",
-       "3                           Body Technician        30.0        20.0   \n",
-       "4                         Controls Engineer    150000.0    121000.0   \n",
-       "5                        CDL Class B Driver        27.0        25.0   \n",
-       "6      Senior Manager, Indirect Procurement    143000.0     96000.0   \n",
-       "...                                     ...         ...         ...   \n",
-       "11106              Administrative Assistant        20.0        18.0   \n",
-       "11107      Registered Nurse (RN) Vaccinator        50.0        50.0   \n",
-       "11108                      Office Associate     42000.0     37000.0   \n",
-       "11109              Licensed Insurance Agent     52000.0     45760.0   \n",
-       "11110                      Stylist/ Clorist     80000.0     35000.0   \n",
+       "                                             title  max_salary  min_salary  \\\n",
+       "0      Principal Cloud Security Architect (Remote)    275834.0    205956.0   \n",
+       "1                 Insights Analyst - Auto Industry     64000.0     58000.0   \n",
+       "2                                    Sales Manager    350000.0    125000.0   \n",
+       "3                                  Body Technician        30.0        20.0   \n",
+       "4                                Controls Engineer    150000.0    121000.0   \n",
+       "...                                            ...         ...         ...   \n",
+       "11106                     Administrative Assistant        20.0        18.0   \n",
+       "11107             Registered Nurse (RN) Vaccinator        50.0        50.0   \n",
+       "11108                             Office Associate     42000.0     37000.0   \n",
+       "11109                     Licensed Insurance Agent     52000.0     45760.0   \n",
+       "11110                             Stylist/ Clorist     80000.0     35000.0   \n",
        "\n",
        "      pay_period formatted_work_type           location  remote_allowed  \\\n",
+       "0         YEARLY           Full-time      United States             1.0   \n",
+       "1         YEARLY           Full-time      United States             1.0   \n",
        "2         YEARLY           Full-time  Coeur d'Alene, ID             1.0   \n",
        "3         HOURLY           Full-time       Waukesha, WI             NaN   \n",
        "4         YEARLY           Full-time        Orlando, FL             NaN   \n",
-       "5         HOURLY           Full-time        Oakland, CA             NaN   \n",
-       "6         YEARLY           Full-time     Broomfield, CO             NaN   \n",
        "...          ...                 ...                ...             ...   \n",
        "11106     HOURLY           Part-time          Ocoee, FL             NaN   \n",
        "11107     HOURLY           Part-time       Muskegon, MI             NaN   \n",
@@ -304,23 +303,23 @@
        "11109     YEARLY           Full-time          Chico, CA             NaN   \n",
        "11110     YEARLY           Full-time        Chicago, IL             NaN   \n",
        "\n",
-       "      formatted_experience_level    application_type state_code     region  \n",
-       "2               Mid-Senior level  ComplexOnsiteApply         ID       West  \n",
-       "3                    Entry level        OffsiteApply         WI    Midwest  \n",
-       "4               Mid-Senior level        OffsiteApply         FL  Southeast  \n",
-       "5               Mid-Senior level        OffsiteApply         CA       West  \n",
-       "6               Mid-Senior level   SimpleOnsiteApply         CO       West  \n",
-       "...                          ...                 ...        ...        ...  \n",
-       "11106                        NaN  ComplexOnsiteApply         FL  Southeast  \n",
-       "11107                        NaN  ComplexOnsiteApply         MI    Midwest  \n",
-       "11108                        NaN  ComplexOnsiteApply         GA  Southeast  \n",
-       "11109                        NaN  ComplexOnsiteApply         CA       West  \n",
-       "11110                        NaN  ComplexOnsiteApply         IL    Midwest  \n",
+       "      formatted_experience_level    application_type     state_code     region  \n",
+       "0               Mid-Senior level        OffsiteApply  United States        NaN  \n",
+       "1                    Entry level        OffsiteApply  United States        NaN  \n",
+       "2               Mid-Senior level  ComplexOnsiteApply             ID       West  \n",
+       "3                    Entry level        OffsiteApply             WI    Midwest  \n",
+       "4               Mid-Senior level        OffsiteApply             FL  Southeast  \n",
+       "...                          ...                 ...            ...        ...  \n",
+       "11106                        NaN  ComplexOnsiteApply             FL  Southeast  \n",
+       "11107                        NaN  ComplexOnsiteApply             MI    Midwest  \n",
+       "11108                        NaN  ComplexOnsiteApply             GA  Southeast  \n",
+       "11109                        NaN  ComplexOnsiteApply             CA       West  \n",
+       "11110                        NaN  ComplexOnsiteApply             IL    Midwest  \n",
        "\n",
-       "[8960 rows x 11 columns]"
+       "[11111 rows x 11 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "id": "6e924361-068d-47ae-8bc7-3fc594932cb6",
    "metadata": {},
    "outputs": [
@@ -340,23 +339,23 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 8960 entries, 2 to 11110\n",
+      "RangeIndex: 11111 entries, 0 to 11110\n",
       "Data columns (total 11 columns):\n",
       " #   Column                      Non-Null Count  Dtype  \n",
       "---  ------                      --------------  -----  \n",
-      " 0   title                       8960 non-null   object \n",
-      " 1   max_salary                  8960 non-null   float64\n",
-      " 2   min_salary                  8960 non-null   float64\n",
-      " 3   pay_period                  8960 non-null   object \n",
-      " 4   formatted_work_type         8960 non-null   object \n",
-      " 5   location                    8960 non-null   object \n",
-      " 6   remote_allowed              691 non-null    float64\n",
-      " 7   formatted_experience_level  6596 non-null   object \n",
-      " 8   application_type            8960 non-null   object \n",
-      " 9   state_code                  8960 non-null   object \n",
+      " 0   title                       11111 non-null  object \n",
+      " 1   max_salary                  11111 non-null  float64\n",
+      " 2   min_salary                  11111 non-null  float64\n",
+      " 3   pay_period                  11111 non-null  object \n",
+      " 4   formatted_work_type         11111 non-null  object \n",
+      " 5   location                    11111 non-null  object \n",
+      " 6   remote_allowed              1881 non-null   float64\n",
+      " 7   formatted_experience_level  8262 non-null   object \n",
+      " 8   application_type            11111 non-null  object \n",
+      " 9   state_code                  11111 non-null  object \n",
       " 10  region                      8960 non-null   object \n",
       "dtypes: float64(3), object(8)\n",
-      "memory usage: 840.0+ KB\n"
+      "memory usage: 955.0+ KB\n"
      ]
     }
    ],
@@ -366,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "id": "1473d763-30d9-4233-b5bb-870d9d607d77",
    "metadata": {},
    "outputs": [],
@@ -374,6 +373,14 @@
     "file_path = '../data/processed/cleaned_job_postings.csv'\n",
     "df_cleaned.to_csv(file_path, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbce0947",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -392,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
